chore(DatePicker): fix datepicker shortcut buttons spacing (#2297)
* make DatePicker addon container controll the shortcut button spacing

* update DatePicker examples

* update DatePicker snap

--- a/packages/dnb-eufemia/src/components/date-picker/style/dnb-date-picker.scss
+++ b/packages/dnb-eufemia/src/components/date-picker/style/dnb-date-picker.scss
@@ -270,8 +270,12 @@
   }
 
   &__addon {
-    display: block;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    gap: 1rem;
     padding: 1rem;
+
     &::after {
       left: 1rem;
       width: calc(100% - 2rem);
